--- a/monorepo.sample.yaml
+++ b/monorepo.sample.yaml
@@ -1,5 +1,7 @@
 # Global Configurations
-entrypoint: "path/to/project"
+entrypoints:
+  - project: "entrypoint1"
+  - project2: "entrypoint2"
 # if your entrypoint is within the <packages_dir_name> directory e.g. path/to/project/<packages_dir_name>/app, set to true
 is_same_file_directory: true
 packages_dir_name: "packages"
