--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  collection: ^1.17.1
   json2yaml: ^3.0.0
+  logging: ^1.1.1
   path: ^1.8.3
   yaml: ^3.1.1
 
